# fpl_ml_optimizer

./: .env.example  .gitignore  FPL_SETUP.md  LICENSE  Makefile  README.md  fpl_ml_model_architecture.md  pyproject.toml  pyrightconfig.json  settings.yaml
.github/workflows/: performance-update.yml
docs/: feature_dictionary.csv
fpl_ai/app/: Home.py  _utils.py  data_loaders.py  fbref_integration.py  team_analytics.py  team_utils.py
fpl_ai/app/pages/: 1_Predicted_Team.py  2_Model_Performance.py  3_10_Week_Planner.py  4_Managers_Audit.py  5_Backtest_and_Tuning.py  6_Player_Database.py  7_Performance_Tracking.py
fpl_ai/app/team_pages/: __init__.py  captaincy.py  comparison.py  display.py  optimization.py  transfers.py
fpl_ai/data/: community_roles.csv  community_schedule.csv  fbr_player_map.csv  league_strength_overrides.csv  odds_team.csv  player_master.parquet  setpiece_overrides.csv  setpiece_roles.csv
fpl_ai/scripts/: fetch_fpl_data.py  fetch_fpl_data_gw7.py  generate_real_actual_results.py  update_fpl_data.sh  verify_actual_results.py
fpl_ai/src/: __init__.py
fpl_ai/src/automation/: __init__.py  performance_monitor.py
fpl_ai/src/cli/: __init__.py  audit.py  pipeline.py  plan10.py  preview.py  tune_and_retrain.py  update_performance.py  update_rotation_engine.py
fpl_ai/src/common/: __init__.py  cache.py  config.py  fpl_scoring.py  logging_setup.py  metrics.py  performance_tracker.py  timeutil.py
fpl_ai/src/features/: __init__.py  builder.py  h2h.py  rotation_metrics.py  rotation_prior.py  team_form.py  touches.py
fpl_ai/src/features/enrichment/: __init__.py  injury_availability.py  setpiece_enrichment.py
fpl_ai/src/features/loaders/: __init__.py  current_season_loader.py  historical_loader.py
fpl_ai/src/features/market/: __init__.py  market_features.py
fpl_ai/src/features/rolling/: __init__.py  rolling_calculator.py
fpl_ai/src/modeling/: __init__.py  calibration.py  mc_sim.py  minutes_model.py  model_lgbm.py
fpl_ai/src/optimize/: __init__.py  chips_forward.py  formation_rules.py  formations.py  optimizer.py  team_builder.py
fpl_ai/src/plan/: __init__.py  multiweek_planner.py  strategy.py  utils_prices.py
fpl_ai/src/providers/: __init__.py  fbrapi_client.py  fixtures.py  fpl_api.py  fpl_map.py  fpl_picks.py  injuries.py  league_strength.py  manager_resolver.py  odds_input.py  setpiece_roles.py  setpieces_proxy.py
fpl_ai/src/tuning/: __init__.py  captain.py  optuna_tune.py  walkforward.py
fpl_ai/tests/: test_smoke.py
